--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html{
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   font-family: poppins, 'curusive';
@@ -11,6 +14,7 @@ code {
 }
 
 .container{
+  margin-right: 10%;
   margin-left: 10%;
 }
 .bg-white{
