--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,3 +1,5 @@
+/* nav.css */
+
 .top-header {
     display: flex;
     width: 100%;
@@ -8,7 +10,6 @@
     margin-top: -15px;
     display: flex;
     width: 100%;
-    /* border: 1px solid; */
     justify-content: space-between;
     padding-left: 30px;
 }
@@ -63,4 +64,127 @@
 
 .sign-up-auth>a {
     color: white !important;
+}
+
+.mobile-nav {
+    cursor: pointer;
+    width: 50px;
+    height: 40px;
+    position: absolute;
+    right: 20px;
+    top: 34px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    transition: .5s ease;
+}
+
+.span-2,
+.span-1,
+.span-3 {
+    opacity: 1;
+    transition: .5s ease;
+}
+
+.mobile-nav.open-nav .span-1 {
+    transform: rotateZ(-51deg);
+    top: 15px;
+}
+
+.mobile-nav.open-nav .span-2 {
+    opacity: 0;
+}
+
+.mobile-nav.open-nav .span-3 {
+    transform: rotateZ(44deg);
+    bottom: 13px;
+}
+
+
+@media all and (max-width:800px) {
+    .top-header>nav {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        padding: 0;
+        top: 16%;
+        border-radius: 10px;
+        display: none;
+        opacity: 0;
+        height: 0;
+        background-color: #3b3054;
+        transition: 0.5s ease;
+    }
+
+    .nav-list>li {
+        height: 56px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .nav-list {
+        display: flex;
+        opacity: 0;
+        flex-direction: column;
+        width: 84%;
+        text-align: center;
+        transition: .5s ease;
+    }
+
+    .nav-list>li>a {
+        text-decoration: none;
+        color: white;
+    }
+
+    .auth-list {
+        flex-direction: column;
+        width: 86%;
+        margin-top: 20px;
+        border-top: 1px solid gray;
+    }
+
+    .sign-up-auth {
+        height: 30px !important;
+        width: 95%;
+        margin-bottom: 30px;
+    }
+
+    .mobile-nav {
+        display: flex;
+    }
+
+    .mobile-nav>span {
+        width: 30px;
+        height: 0px;
+        border: 1px solid;
+        position: absolute;
+        margin: 5px 0px;
+        color: gray;
+    }
+
+    .span-1 {
+        top: 7px;
+    }
+
+    .span-2 {
+        top: 15px;
+    }
+
+    .span-3 {
+        bottom: 5px;
+    }
+
+    .open-top-nav {
+        display: flex !important;
+        opacity: 1 !important;
+    }
+
+    .show-height{
+        height: 305px !important;
+    }
+    .opacity-1{
+        opacity: 1 !important;
+    }
 }
