fixed name and button accessibility issue

--- a/src/App.css
+++ b/src/App.css
@@ -154,6 +154,13 @@
     margin: 20px;
 }
 
+.footer-details-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
 .footer-bottom {
     background-color: hsl(260, 8%, 14%);
 }
