fixed aria labelby issue

--- a/src/styles/url-shortner-container.css
+++ b/src/styles/url-shortner-container.css
@@ -1,5 +1,9 @@
 /* urlshortner container */
 
+#url-label{
+    display: none;
+}
+
 .url-shortner-container {
     position: relative;
     display: flex;
